--- a/_config.yml
+++ b/_config.yml
@@ -1,15 +1,16 @@
 # Dependencies
 markdown:         kramdown
-highlighter:      rouge
+highlighter:      pygments
 
 # Permalinks
 permalink:        pretty
 
+
 # Setup
-title:            Hyde
-tagline:          'A Jekyll theme'
-description:      'A brazen two-column <a href="http://jekyllrb.com" target="_blank">Jekyll</a> theme that pairs a prominent sidebar with uncomplicated content. Made by <a href="https://twitter.com/mdo" target="_blank">@mdo</a>.'
-url:              http://hyde.getpoole.com
+title:            Zina Astafyeva
+tagline:          'Web Developer'
+description:      'Web Developer'
+url:              http://tragetraje.github.io
 baseurl:          /
 
 author:
@@ -20,7 +21,8 @@ paginate:         5
 
 # Custom vars
 version:          2.1.0
-gems: [jekyll-paginate]
+gems: [jekyll-paginate, jemoji]
+
 
 github:
-  repo:           https://github.com/poole/hyde
+  repo:           https://github.com/tragetraje
